NIFI-12542 Updated Zendesk Components using Current APIs
This closes #8170

Signed-off-by: David Handermann <exceptionfactory@apache.org>